# jarvis

./: .aiexclude  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.sh  install-rework.sh  jarvis.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: .vimrc  authorized_keys  id.tar.gz.gpg
config/keepass/: apirak.kdbx
docs/: koha-dump-fast-fix.sql  koha-info.pl  koha-recheck-db.sql  koha-renew.pl  ldap-connection  mysql-create-db-and-user.txt  psql-create-db-and-user.txt  read-csv.pl
lib/: Mattermost.pm  Redmine.pm
module/: koha.pl  youtube.pl
module/ddos/: attack.pl  run.sh  word.sh
src/jarvis/: config.py  main.py  migrate_secrets.py
src/jarvis/commands/: __init__.py  application.py  db.py  network.py  self.py  system.py
